# laboratorio-di-programmazione

./: CMakeLists.txt  Item.cpp  Item.h  ListUpdate.cpp  ListUpdate.h  ObjectNumberUpdate.cpp  ObjectNumberUpdate.h  ObjectToBuyUpdate.cpp  ObjectToBuyUpdate.h  Observer.h  README.md  Shoppinglist.cpp  Shoppinglist.h  Subject.h  User.cpp  User.h  list.cpp  list.h  main.cpp
Test/: CMakeLists.txt  TestItem.cpp  TestList.cpp  TestListUpdate.cpp  TestUser.cpp  runAllTests.cpp
Test/lib/gtest/: BUILD.bazel  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md
Test/lib/gtest/.github/ISSUE_TEMPLATE/: 00-bug_report.yml
Test/lib/gtest/ci/: linux-presubmit.sh  macos-presubmit.sh
Test/lib/gtest/docs/: advanced.md  community_created_documentation.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_for_dummies.md  pkgconfig.md  platforms.md  primer.md  quickstart-cmake.md  samples.md
Test/lib/gtest/docs/_sass/: main.scss
Test/lib/gtest/docs/reference/: actions.md  assertions.md  matchers.md  mocking.md  testing.md
Test/lib/gtest/googlemock/: CMakeLists.txt
Test/lib/gtest/googlemock/src/: gmock-all.cc  gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
Test/lib/gtest/googlemock/test/: BUILD.bazel  gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  (+18 more)
Test/lib/gtest/googletest/: CMakeLists.txt  README.md
(+153 files in other folders)
